# proxmox-soft-watchdog

./: Cargo.toml  README.md  config.json  watchdog-feed.service  watchdog-feed.timer
src/: api.rs  config.rs  main.rs  monitoring.rs
